  wxDC::SetDeviceClippingRegion(), wxShowEvent::IsShown(),
  wxIconizeEvent::IsIconized(), wxFileName::StripExtension(),
  wxXmlNode::GetAttribute[s](), wxXmlNode::AddAttribute().

All (GUI):

- Add wxBU_EXACTFIT support to wxToggleButton XRC handler (Ronny Krueger).
- wxRTC: fixed AltGr+key input and numeric keypad Delete on Windows.
- Paper size conversion from dimensions to id now uses definition ordering
  in order to use common types where there are duplications, fixing problems
  where invalid sizes caused incorrect second invocation of page setup
  dialog.
- Added background colour setting to wxRichTextCtrl font dialog.
- Corrected writing direction for Farsi.

wxMSW:

- Fixed crash when copying Unicode URLs to the clipboard (Tim Kosse).
- Fixed generation of wxEVT_CHAR_HOOK events.
- Implement wxFileName::SetTimes() for directories (Steve Lamerton).
- Correct wxTopLevelWindow::SetShape() for windows with menu bar (Peter Friis).
- Backported speed-up of Vaclav Slavik's high quality print preview speed-up.
  You now need to set wxUSE_HIGH_QUALITY_PREVIEW_IN_WXMSW in
  src/common/prntbase.cpp and wxUSE_ENH_METAFILE_FROM_DC in
  include/wx/msw/enhmeta.h.

wxMac:

- Fixed a problem with wxListCtrl whereby event processing would change
  the event object identifier, and thereby affect subsequent processing,
  and defeat custom event propagation of commands from current focus window.
- Fixed a problem with wxFontDialog on Mac OS 10.6.

2.8.10:
-------

All:

- wxHashMap::insert() doesn't update the value if it didn't insert the element
  any more (Marcin Malich).
- Correct bug in wxTimeSpan::Format() for negative spans.
- Correct several bugs in wxList using end() iterators (Suzumizaki-Kimitaka).
- Added Vietnamese translation (Tran Ngoc Quan).
- Updated Slovenian translation (Martin Srebotnjak).
- Corrected Serbian locale name (Cody Precord).
- Fix wxURL::GetInputStream() for URLs with special characters in credentials
  (Robert Wruck).